logo updated, link styles, spacing fixes

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -31,6 +31,10 @@ body {
     display: flex;
     flex-direction: row;
     box-sizing: border-box;
+
+    a {
+      display: inline-block;
+    }
   }
 
   .ss-row .col-1:last-child {
@@ -48,10 +52,6 @@ body {
   .ss-floating-box {
     flex: 0 0 calc(33.333333% - 20px);
     padding: 10px;
-
-    // a:hover {
-    //   text-decoration:none;
-    // }
 
     a:hover .ss-subsection-title {
       color:#f4af1a;
